--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -1,4 +1,4 @@
-name: Python application
+name: Unit tests
 
 on: [push]
 
@@ -13,11 +13,17 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: 3.7
+    - uses: jpetrucciani/black-check@master
+      with:
+        path: '.'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Test with pytest
+        pip install coverage
+    - name: Run unittests
       run: |
-        pip install pytest
-        pytest
+        coverage run -m unittest discover -s tests
+    - uses: codecov/codecov-action@v1
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }} #required
