--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -32,6 +32,8 @@ jobs:
     - name: Run unittests
       run: |
         coverage run -m unittest discover -s tests
+      env:
+        API_USERNAME: ${{ secrets.API_USERNAME }}
     - uses: codecov/codecov-action@v1
       with:
         token: ${{ secrets.CODECOV_TOKEN }} #required
