--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -23,7 +23,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install coverage
+        pip install coverage coveragepy
     - name: Collect MOD files
       run: |
         mkdir tests/mod
@@ -32,6 +32,7 @@ jobs:
     - name: Run unittests
       run: |
         coverage run -m unittest discover -s tests
+        coverage xml
         ls -la .
       env:
         API_USERNAME: ${{ secrets.API_USERNAME }}
